T18-Kubernetes-Policy-Enforcement/gautam789/policies/readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: enforce
  rules:
  - name: validate-readonly-rootfs
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Containers must run with readOnlyRootFilesystem enabled"
      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
